@@ -1,3 +1,8 @@
+2015-04-02  Ed Maste  <emaste@freebsd.org>
+
+	* config/tc-aarch64.c (set_error_kind): Delete.
+	(set_error_message): Delete.
+
 2015-04-02  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* configure: Regenerated.
